[workspace]
resolver = "2"
members = [
    "oxbow",
    "py-oxbow",
    "r-oxbow/src/rust"
]

[workspace.dependencies]
oxbow = { path = "oxbow" }
arrow = { version = "52.1.0", features = ["pyarrow"] }
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
byteorder = "1.4.3"
flate2 = "1.1.0"
indexmap = "2.7.1"
noodles = { version = "0.90.0", features = ["bam", "bcf", "bed", "bgzf", "core", "csi", "cram", "fasta", "fastq", "gff", "gtf", "sam", "tabix", "vcf"] }