[workspace]
resolver = "2"
members = [
    "oxbow",
    "py-oxbow",
    "r-oxbow/src/rust"
]

[workspace.dependencies]
oxbow = { path = "oxbow" }
arrow = { version = "57" }
arrow-array = { version = "57" }
arrow-schema = { version = "57" }
noodles = { version = "0.102", features = ["bam", "bcf", "bed", "bgzf", "core", "csi", "cram", "fasta", "fastq", "gff", "gtf", "sam", "tabix", "vcf"] }
bigtools = { version = "0.5.6", features = ["read"] }
flate2 = "1.1.5"
indexmap = "2.12.1"