[package]
name = "oxbow"
version = "0.4.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Read specialized bioinformatic file formats as data frames in R, Python, and more."

[dependencies]
arrow = { workspace = true }
bigtools = { workspace = true}
bstr = { workspace = true }
indexmap = { workspace = true }
noodles = { workspace = true }
