[package]
name = "oxbow"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
description = "Read conventional genomic file formats as data frames and more via Apache Arrow."
homepage = "https://oxbow.readthedocs.io"
repository = "https://github.com/abdenlab/oxbow"
keywords = ["genomics", "ngs", "bioinformatics", "dataframe", "arrow"]
categories = [
    "data-structures",
    "encoding",
    "science::bioinformatics::genomics", 
    "science::bioinformatics::sequence-analysis",
    "parsing",
]

[dependencies]
arrow = { workspace = true }
bigtools = { workspace = true}
bstr = { workspace = true }
indexmap = { workspace = true }
noodles = { workspace = true }
