[package]
name = "py-oxbow"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "oxbow"
crate-type = ["cdylib"]
doc = false

[dependencies]
oxbow = { workspace = true }
arrow = { workspace = true }
noodles = { workspace = true }
bigtools = { workspace = true }
flate2 = { workspace = true }
pyo3 = { version = "0.28", features = ["abi3-py39"] }
pyo3-arrow = { version = "0.17", default-features = false }