[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxbow"
dynamic = ["version"]
description = "Read specialized bioinformatic file formats into dataframes."
authors = [{ name = "Oxbow Developers", email = "nabdennur@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/abdenlab/oxbow"

[dependency-groups]
dev = [
    "polars>=1.26.0; python_version >= '3.9'",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1; python_version >= '3.10'",
    "sphinx>=8.1.3; python_version >= '3.11'",
    "sphinx-autobuild>=2024.10.3; python_version >= '3.9'",
    "sphinx-book-theme>=1.1.4; python_version >= '3.9'",
    "sphinx-copybutton>=0.5.2",
]
notebooks = [
    "jupyterlab>=4.3.6",
    "pandas>=2.2.3; python_version >= '3.9'",
    "pyarrow>=19.0.1; python_version >= '3.9'",
    "pysam>=0.23.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
# handled by CI
required-version = ">=0.5.0"
default-groups = "all"

[tool.ruff.lint.isort]
known-first-party = ["oxbow"]
