[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxbow"
dynamic = ["version"]
description = "Read specialized bioinformatic file formats into dataframes."
authors = [{ name = "Oxbow Developers", email = "nabdennur@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=1.26.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]


[project.urls]
homepage = "https://github.com/abdenlab/oxbow"

[dependency-groups]
dev = [
    "debugpy==1.8.13",
    "pytest>=8.3.5",
    "pytest-manifest==0.1",
    "pytest-mock",
    "ruff>=0.11.2",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1; python_version >= '3.10'",
    "sphinx>=8.1.3; python_version >= '3.11'",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
notebooks = [
    "jupyterlab>=4.3.6",
    "pysam>=0.23.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
# handled by CI
required-version = ">=0.6.8"
default-groups = "all"

[tool.ruff.lint.isort]
known-first-party = ["oxbow"]
