[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxbow"
dynamic = ["version"]
description = "Read genomic file formats into data frames and more."
authors = [{ name = "Oxbow Developers", email = "nabdennur@gmail.com" }]
keywords = ["genomics", "ngs", "bioinformatics", "dataframe", "arrow"]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "arro3-core>=0.4.6",
    "polars>=1.26.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "fsspec>=2025.5.1",
]

[project.urls]
homepage = "https://github.com/abdenlab/oxbow"
documentation = "https://oxbow.readthedocs.io/"
repository = "https://github.com/abdenlab/oxbow"
issues = "https://github.com/abdenlab/oxbow/issues"

[dependency-groups]
dev = [
    "debugpy==1.8.13",
    "pytest>=8.3.5",
    "pytest-manifest==0.1",
    "pytest-mock",
    "ruff>=0.11.2",
]
docs = [
    "dask[dataframe]>=2024.8.0",
    "duckdb>=1.3.0",
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1; python_version >= '3.10'",
    "sphinx>=8.1.3; python_version >= '3.11'",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
notebooks = [
    "jupyterlab>=4.3.6",
    "pysam>=0.23.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
# handled by CI
required-version = ">=0.6.8"
default-groups = "all"

[tool.ruff.lint.isort]
known-first-party = ["oxbow"]
